<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/text_login_title"
        android:layout_width="1290dp"
        android:layout_height="326dp"
        android:layout_marginTop="168dp"
        android:text="@string/login_de_usu_rio"
        android:textColor="#000000"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="1605dp"
        android:layout_height="436dp"
        android:layout_marginTop="940dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="180sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login_title" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="1487dp"
        android:layout_height="469dp"
        android:layout_marginTop="488dp"
        android:autofillHints=""
        android:backgroundTint="#050607"
        android:fontFamily="sans-serif"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="180sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="897dp"
        android:layout_height="324dp"
        android:layout_marginTop="468dp"
        android:background="@color/white"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:soundEffectsEnabled="true"
        android:text="@string/login"
        android:textColor="#E7E7E7"
        android:textColorLink="#FFFFFF"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="1175dp"
        android:layout_height="374dp"
        android:layout_marginEnd="840dp"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cadastre_se"
        android:textColor="@color/white"
        android:textColorLink="#FAF9FB"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="852dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="687dp"
        android:layout_height="303dp"
        android:layout_marginTop="3176dp"
        android:text="@string/login_com_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerLink"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
